--- a/desafios/100 desafios/ds26 site de vendas/index.html
+++ b/desafios/100 desafios/ds26 site de vendas/index.html
@@ -28,15 +28,15 @@
 </head>
 
 <body>
-    <header class="container-fluid">
-        <section class="container">
-            <article class="row">
+    <header class="container-fluid  ">
+        <section class="container ">
+            <article class="row d-flex  align-items-center">
                 <a href="/" class="col-md-2">
                     <img src="assets/img/logo.svg" alt="logo">
                 </a>
-                <form action="#" class="col-md-7">
+                <form action="#" class="col-md-7 d-flex align-items-center">
                     <input type="text" name="name" placeholder="Procurar Roupas aqui">
-                    <button>
+                    <button class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
                             <path
@@ -44,10 +44,10 @@
                         </svg>
                     </button>
                 </form>
-                <ul class="col-md-3 nav">
+                <ul class="col-md-3 nav d-flex align-items-center justify-content-evenly" >
                     <li class="nav-item">
                         <a href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor"
                                 class="bi bi-person-fill" viewBox="0 0 16 16">
                                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                             </svg>
@@ -55,60 +55,57 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <span class="notifc">3</span>
+                        <span class="notifc d-flex align-items-center justify-content-center">4</span>
                         <a href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>
                             Carrinho
                         </a>
                     </li>
                 </ul>
             </article>
         </section>
-    
-    <nav class="container-fluid nav-produtos">
-        <section class="container">
-            <ul class="nav">
-                <li class="nav-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
-                    </svg>
-                    Moda Feminina
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            Lançamentos
-                        </li>
-                        <li class="nav-item">
-                            Plus Size
-                        </li>
-                        <li class="nav-item">
-                            Moda Praia
-                        </li>
-                        <li class="nav-item">
-                            Acessórios
-                        </li>
-                        <li class="nav-item">
-                            Promoção
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
-                    </svg>
-                    Calçados
-                </li>
-            </ul>
-        </section>
-    </nav>
 </header>
+<nav class="container-fluid nav-produtos">
+    <section class="container">
+        <ul class="nav">
+            <li class="nav-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+                Moda Feminina
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        Lançamentos
+                    </li>
+                    <li class="nav-item">
+                        Plus Size
+                    </li>
+                    <li class="nav-item">
+                        Moda Praia
+                    </li>
+                    <li class="nav-item">
+                        Acessórios
+                    </li>
+                    <li class="nav-item">
+                        Promoção
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+                Calçados
+            </li>
+        </ul>
+    </section>
+</nav>
     <main>
         <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
             <article class="carousel-inner">
